force-app/main/default/objects/PISUsers__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CGAnnualGenerated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CGAnnualGenerated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CGNewEmployeeGenerated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CGNewEmployeeGenerated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COIAnnualGenerated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COIAnnualGenerated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COICGAnnualSendEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COICGAnnualSendEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COINewEmployeeGenerated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COINewEmployeeGenerated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COMPANYCODE__c</fullName>
        <label>COMPANYCODE</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COMPANYNAME_HOST__c</fullName>
        <label>COMPANYNAME (HOST)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COMPANYNAME__c</fullName>
        <label>COMPANYNAME (HOME)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONTRACT__c</fullName>
        <label>CONTRACT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEPARTMENT__c</fullName>
        <label>DEPARTMENT</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEPTFULLEN__c</fullName>
        <label>DEPTFULLEN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEPTFULLTH__c</fullName>
        <label>DEPTFULLTH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMAIL__c</fullName>
        <label>EMAIL</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EMPLOYEEID__c</fullName>
        <externalId>true</externalId>
        <label>EMPLOYEEID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMPLOYEEMOBILE__c</fullName>
        <label>EMPLOYEEMOBILE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMPLOYEETEL__c</fullName>
        <label>EMPLOYEETEL</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENFIRSTNAME__c</fullName>
        <label>ENFIRSTNAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENLASTNAME__c</fullName>
        <label>ENLASTNAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EN_Fullname__c</fullName>
        <formula>ENFIRSTNAME__c + &quot; &quot; + ENLASTNAME__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EN Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EN_LineManager__c</fullName>
        <formula>LineManagerUser__r.FirstName_EN__c + &apos; &apos; + LineManagerUser__r.LastName_EN__c</formula>
        <label>EN LineManager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FUNCTION__c</fullName>
        <label>FUNCTION</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOLDERPOSITION__c</fullName>
        <label>HOLDERPOSITION</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOME_COMP__c</fullName>
        <label>HOME COMP</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOME_ID__c</fullName>
        <label>HOME ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOME_ORGID__c</fullName>
        <label>HOME ORGID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOST_COMP__c</fullName>
        <label>HOST COMP</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOST_ID__c</fullName>
        <label>HOST ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hotel_Privilege__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hotel Privilege</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INDICATOR__c</fullName>
        <label>INDICATOR</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISHEAD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ISHEAD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEVEL__c</fullName>
        <label>LEVEL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_No__c</fullName>
        <label>Level No</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LineManagerEmail__c</fullName>
        <label>LineManagerEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LineManagerUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LineManagerUser</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LMPISUsers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MAINPOSITION__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MAINPOSITION</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Employee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NEW EMPLOYEE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OBJENFULLNAME__c</fullName>
        <label>OBJENFULLNAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OBJTHFULLNAME__c</fullName>
        <label>OBJTHFULLNAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORGID__c</fullName>
        <label>ORGID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PERSAREA__c</fullName>
        <label>PERSAREA</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PERSUBAREA__c</fullName>
        <label>PERSUBAREA</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POSID__c</fullName>
        <label>POSID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Full_Name__c</fullName>
        <formula>POSID__c  &amp; &quot;-&quot; &amp; OBJENFULLNAME__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Position Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REFERENCEID__c</fullName>
        <label>REFERENCEID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportToEmail__c</fullName>
        <label>ReportToEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ReportToID__c</fullName>
        <label>ReportToID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportToName__c</fullName>
        <label>ReportToName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportToPOS__c</fullName>
        <label>ReportToPOS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportToUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ReportToUser</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PISUsers_ReportToUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retirement_Selection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retirement Selection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SECTIONS__c</fullName>
        <label>SECTIONS</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SectHeadUpEmail__c</fullName>
        <label>SectHeadUpEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SectHeadUpID__c</fullName>
        <label>SectHeadUpID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SectHeadUpName__c</fullName>
        <label>SectHeadUpName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SectHeadUpPosID__c</fullName>
        <label>SectHeadUpPosID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SectHeadUpUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SectHeadUpUser</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PISUsers_SectHeadUpUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subcordinate__c</fullName>
        <label>Subcordinate</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>THFIRSTNAME__c</fullName>
        <label>THFIRSTNAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>THLASTNAME__c</fullName>
        <label>THLASTNAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>THTITLE__c</fullName>
        <label>THTITLE</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TH_Fullname__c</fullName>
        <formula>THFIRSTNAME__c + &quot; &quot; + THLASTNAME__c</formula>
        <label>TH Fullname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITS__c</fullName>
        <label>UNITS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Type__c</fullName>
        <formula>IF(AND( LEVEL__c = &quot;VP&quot; ),&quot;VP&quot;,
IF(AND( LEVEL__c = &quot;Section Head&quot; ), &quot;Section Head&quot;,
IF(AND( LEVEL__c = &quot;EVP Upward&quot; ),&quot;EVP&quot;,
&quot;Staff&quot;)))</formula>
        <label>User Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PISUsers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PISUsers</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Active__c</columns>
        <columns>NAME</columns>
        <columns>EMPLOYEEID__c</columns>
        <columns>EN_Fullname__c</columns>
        <columns>User__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LineManagerEmail__c</columns>
        <columns>LineManagerUser__c</columns>
        <columns>ReportToUser__c</columns>
        <columns>DEPARTMENT__c</columns>
        <columns>SECTIONS__c</columns>
        <columns>EMAIL__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ReportToEmail__c</columns>
        <columns>ReportToID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EMAIL__c</field>
            <operation>equals</operation>
            <value>saruntorn@thaioilgroup.com</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>UserID</label>
        <type>Text</type>
    </nameField>
    <recordTypes>
        <fullName>Non_PIS_User</fullName>
        <active>true</active>
        <label>Non PIS User</label>
    </recordTypes>
    <recordTypes>
        <fullName>PIS_User</fullName>
        <active>true</active>
        <label>PIS User</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>